package Vehicle;

public class Bike extends Vehicle{
    Bike(String[] args) {
        super(args);
    }

}
