package Vehicle;

public class Car extends Vehicle{
    Car(String[] args) {
        super(args);
    }
}
